fixed overflow-y

--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
 
 body{
     background-color: rgb(0, 0, 29);
-    overflow-y: hidden;
 }
 
 /* Result Screen  */
